[gd_scene load_steps=11 format=2]

[ext_resource path="res://img/ui/selec/enemySwimming_2.png" type="Texture" id=1]
[ext_resource path="res://img/ui/selec/enemyFlyingAlt_2.png" type="Texture" id=2]
[ext_resource path="res://img/ui/selec/enemyFlyingAlt_1.png" type="Texture" id=3]
[ext_resource path="res://img/ui/selec/enemyWalking_1.png" type="Texture" id=4]
[ext_resource path="res://img/ui/selec/enemyWalking_2.png" type="Texture" id=5]
[ext_resource path="res://img/ui/selec/enemySwimming_1.png" type="Texture" id=6]
[ext_resource path="res://script/Mob.gd" type="Script" id=7]
[ext_resource path="res://sound/error.wav" type="AudioStream" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 1 ) ],
"loop": true,
"name": "swim",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "fly",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 4 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 68.3593

[node name="Mob" type="Area2D"]
collision_layer = 8
collision_mask = 12
script = ExtResource( 7 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
rotation = 1.55957
frames = SubResource( 1 )
animation = "fly"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 0
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )

[connection signal="body_entered" from="." to="." method="_on_Mob_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Mob_body_exited"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
